<resources>

    <string name="Sessions">Sessions</string>
    <string name="Session">Session</string>
    <string name="CheckForUpdates">Update Data</string>
    <string name="FAQ">FAQ</string>
    <string name="SwitchToUAT">Switch To UAT Version</string>
    <string name="SwitchToProduction">Switch To Production Version</string>
    <string name="Keyword">Keyword</string>
    <string name="KeywordSearch">Keyword Search</string>
    <string name="FavoriteSessions">Favorite Sessions</string>
    <string name="Feedback">Feedback</string>
    <string name="Switch">Switch</string>
    <string name="Subject">Subject</string>
    <string name="Grade">Grade</string>
    <string name="Search">Search</string>
    <string name="Timeslot">Timeslot</string>
    <string name="Other">Other</string>
    <string name="Keynotes">Keynotes</string>
    <string name="NoDataAvailable">No Data Available</string>
    <string name="CheckForUpdatesMessage">Data has been Updated</string>
    <string name="ClearAllDataMessage">All Conference Data are cleared from system. Please download again using \'Check for Updates\'!</string>
    <string name="hello_world">Hello world!</string>
    <string name="Keynote">Keynote</string>
    <string name="pic">pic</string>
    <string name="SearchSessions">Search Sessions</string>
    <string name="NoKeynoteData">No Keynote data in system, Please download again using \'Check for Updates\'.</string>
    <string name="NoFavoriteSession">There currently no favorites saved.</string>
    <string name="NoSessionWithinSearch">No Session found with the search criteria, please change your criteria and try again.</string>
    <string name="Speaker">Speaker</string>
    <string name="SpeakerContent">Quality of the Speaker Content</string>
    <string name="PresentationQuality">Quality of the Presentation</string>
    <string name="TeachingAssignment">Application to your teaching assignment</string>
    <string name="PotentialImpact">Potential Impact on Your Professional Practice</string>
    <string name="OverallRating">Overal Rating</string>
    <string name="Comment">Comment</string>
    <string name="EnterYourComment">Enter your Comments here please</string>
    <string name="SubmitFeedback">Submit</string>
    <string name="ClearForm">Clear Form</string>
    <string name="CommentHint">Write your comments here</string>
    <string name="ClearFormMessage">Form is cleared</string>
    <string name="SubmitFeedbackMessage">Your Feedback is submitted</string>
    <string name="favoriteList">Mark as favorite</string>
    <string name="writeFeedback">Leave Feedback</string>
    <string name="DownloadKeynotePicture">Download Keynotes\' Picture</string>
    <string name="PresidentMessage">President\'s Message</string>
    <string name="title_activity_faq">FAQ</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_message">President\'s Message</string>
    <string name="message">Convention Greetings\n\nAs a teacher, I always impressed on my students the importance of life long learning and that they are fortunate to live in a time that allowed them access to information by merely clicking a button. Teachers know the importance of continuous growth and work hard to refine their teaching practice throughout their careers. Recent changes to the TQS along with the development of the LQS and SLQS has further sparked the need for teachers and school leaders to take a reflective look at their practice.\n\nTeachers’ convention has always been one of my favourite times of the school year. Not only was I able to connect with colleagues I have not seen in awhile, it was a time of the year that allowed me to refocus my energy around my own professional growth. The ability for teachers to self-direct their own professional growth in the form of the professional growth plan is something that the Association has long deemed important.\n\nConvention also allowed me the opportunity to seek a variety of different professional development options that I could later expand on if so desired. Not only have I been fortunate to hear some great speakers who have challenged my thinking around pedagogy, or life in general, I have been fortunate to present to my colleagues on my own learning and professional practice. Both opportunities enhanced my teaching and I am grateful to the teachers who volunteer their time and energy to organize conventions for their colleagues across the province.\n\nPublic education in Alberta is one of the best in the world and I credit our success to the hard work and professionalism of teachers and school leaders across the province.
    </string>
    <string name="QuestionAndAnswer">&lt;font color=\'#800080\'&gt;Do I have to attend convention?&lt;/font&gt;&lt;br/&gt;&lt;br/&gt;
        All certified teachers employed in Alberta\'s public school boards have a legal and professional obligation to attend their designated teachers\' convention each year. These two convention days are paid days of work. Being absent from convention can result in unprofessional conduct consequences including lost wages, fines, termination and removal of certification. If there is a unique professional development opportunity at the same time as convention, a teacher must apply for alternate PD. The application will be granted or denied. The form can be found on the website under Alternate PD at www.getca.com&lt;br/&gt;&lt;br/&gt;
        &lt;font color=\'#800080\'&gt;Who can come to convention?&lt;/font&gt;&lt;br/&gt;&lt;br/&gt;
        All Certified teachers employed by Edmonton Public, Edmonton Catholic, Fort McMurray Public and Fort McMurray Catholic Schools.&lt;br/&gt;&lt;br/&gt;
        Student teachers for the University of Alberta who are in their final practicum during convention can attend. Convention ID\'s are given out at the student union office at the U of A.&lt;br/&gt;&lt;br/&gt;
        Substitude teachers can attend. Convention ID\'s can be picked up at the ATA local office in Barneet house, substitute teachers meeting or at the info desk at converion. An ATA membership card, school board ID or proof of employment are required.&lt;br/&gt;&lt;br/&gt;
        Teachers on leave if they are on maternity leave, unpaid leave or professional improvement leaves can attend if the have paid their local union dues for the year. Convention ID\'s con be picked up at the ATA local office in Barnett house or at the info desk at convention. An ATA membership card, school board ID or proof of employment are required.&lt;br/&gt;&lt;br/&gt; 
        A teach on Medical Leave is not able to attend convention because, contractually, convention days are paid days of work. If a teacher on medical leave attends convention they would be expected to return to work the next school day after convention.&lt;br/&gt;&lt;br/&gt;
        Teachers who are not employed by Alberta schools can attend if they meeet all requirements for Out of District registration. There is a fee involved. Go to www.getca.com and click on Out of Distriction Registration for more details.&lt;br/&gt;&lt;br/&gt;
        &lt;font color=\'#800080\'&gt;Can I bring my child to convention?&lt;/font&gt;&lt;br/&gt;&lt;br/&gt;
        No. Convention is a paid work day. Arrangements for child care during convention are the same as during a day of school. Teachers who bring children to convention will be asked to leave and will be contacted by a provincial ATA staff officer.&lt;br/&gt;&lt;br/&gt;
        &lt;font color=\'#800080\'&gt;How is convention funded?&lt;/font&gt;&lt;br/&gt;&lt;br/&gt;
        Each year GETCA receiveds funding from convention fees paid by members of the ATA locals for Edmonton and Fort McMurray, as well as registrations and exhibitors. A big part of the fees are spent on speakers and speaker expenses including travel, accommodation and substitute release costs. Another large amount goes to paying for the facilities, rentals, audio-visual costs and printing. Other costs include website maintenance, app development, professional accounting and legal services, meeting costs and committee member expenses.&lt;br/&gt;&lt;br/&gt;
        &lt;font color=\'#800080\'&gt;Is there free Wifi at the Shaw and Westin?&lt;/font&gt;&lt;br/&gt;&lt;br/&gt;
		It is not free but we do have a certain number wireless connections available. Teachers are welcome to connect at the Shaw without a code and a code will be provided at the Westin info booth should you need it.&lt;br/&gt;&lt;br/&gt;
        &lt;font color=\'#800080\'&gt;Why is there only an iPhone app?&lt;/font&gt;&lt;br/&gt;&lt;br/&gt;
 		This is our first year trying an app for convention. We are starting with the iPhone and will possibly add an android and/or blackberry app next year, depending on feed back.&lt;br/&gt;&lt;br/&gt;
        &lt;font color=\'#800080\'&gt;Why are sessions I want always full?&lt;/font&gt;&lt;br/&gt;&lt;br/&gt;
		Unfortunately, we cannot always predict the number of people that will find one session more interesting than another. We do our best with the information we have and the room sizes that are available. We ask that you have three options available for each time slot so that you have a plan when your first choice fills up.</string>
    <string name="GETCA">GETCA</string>
    <string name="SystemInfo" formatted="false">.</string>
   <string name="GETCAConference">GETCA Conference</string>
    <string name="downloadPDF">Download PDF Schedule</string>
    <string name="downloadIniData">Check for Update</string>
</resources>