<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/textSessionDisplay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FeedbackActivity" >

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/Session"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textSessionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textName"
        android:layout_alignBottom="@+id/textName"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/textName"
        android:text="Small Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textName"
        android:layout_below="@+id/textName"
        android:text="@string/Speaker"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textSessionSpeaker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/textSessionTitle"
        android:layout_alignRight="@+id/textSessionTitle"
        android:text="Small Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:id="@+id/line1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignRight="@+id/ratingSpeakerContent"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/line1"
        android:layout_below="@+id/line1"
        android:layout_marginTop="5dp"
        android:layout_toLeftOf="@+id/ratingSpeakerContent"
        android:text="@string/SpeakerContent"
         />

    <Button
        android:id="@+id/buttonFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editComment"
        android:layout_alignParentBottom="true"
        android:minHeight="24dip"
        android:onClick="SubmitFeedbackClicked"
        android:text="@string/SubmitFeedback" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_toLeftOf="@+id/ratingTeachingAssignment"
        android:text="@string/TeachingAssignment"
         />

    <RatingBar
        android:id="@+id/ratingSpeakerContent"
        style="?android:attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textSessionSpeaker"
        android:layout_alignTop="@+id/textView5"
        android:isIndicator="false"
        android:numStars="4"
        android:stepSize="1" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_below="@+id/textView7"
        android:layout_toLeftOf="@+id/ratingOverall"
        android:text="@string/PotentialImpact"
         />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/ratingOverall"
        android:layout_below="@+id/ratingOverall"
        android:text="@string/Comment"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_below="@+id/textView10"
        android:ems="10"
        android:enabled="true"
        android:hint="@string/CommentHint"
        android:inputType="textMultiLine"
        android:textAppearance="?android:attr/textAppearanceMedium" >

        <requestFocus />
    </EditText>

    <RatingBar
        android:id="@+id/ratingPotentialImpact"
        style="?android:attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ratingTeachingAssignment"
        android:layout_below="@+id/ratingTeachingAssignment"
        android:isIndicator="false"
        android:numStars="4"
        android:stepSize="1" />

    <RatingBar
        android:id="@+id/ratingOverall"
        style="?android:attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ratingPotentialImpact"
        android:layout_below="@+id/textView8"
        android:isIndicator="false"
        android:numStars="4"
        android:stepSize="1" />

    <RatingBar
        android:id="@+id/ratingPresentationQuality"
        style="?android:attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ratingSpeakerContent"
        android:layout_below="@+id/ratingSpeakerContent"
        android:isIndicator="false"
        android:numStars="4"
        android:stepSize="1" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ratingPresentationQuality"
        android:layout_toLeftOf="@+id/ratingPresentationQuality"
        android:text="@string/PresentationQuality" />

    <RatingBar
        android:id="@+id/ratingTeachingAssignment"
        style="?android:attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ratingPresentationQuality"
        android:layout_below="@+id/ratingPresentationQuality"
        android:isIndicator="false"
        android:numStars="4"
        android:stepSize="1" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ratingOverall"
        android:layout_toLeftOf="@+id/ratingOverall"
        android:text="@string/OverallRating" />

</RelativeLayout>